--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ h1 {
   display: none !important;
 }
 
+.pokemonCardHeader {
+  color: white;
+}
+
 .PokemonInfo {
   width: 400px;
   height: 300px;
@@ -57,7 +61,16 @@ h1 {
 }
 
 .pokemonHeader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   border-radius: 40px;
+  min-width: 250px;
+  min-height: 320px;
+  border: 1px solid white;
+  border-radius: 40px;
+  box-shadow: 0px 0px 10px 1px lightslategray;
 }
 
 .pokemonCards {
@@ -69,15 +82,14 @@ h1 {
 }
 
 .pokemonCard {
-  fill: block;
-  border: 1px solid white;
-  border-radius: 40px;
-  box-shadow: 0px 0px 10px 1px lightslategray;
-  /* filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.5)); */
+  min-width: 302px;
+  min-height: 382px;
 }
 
-.pokemonCard :hover {
+.pokemonHeader:hover {
   cursor: pointer;
+  min-width: 310px;
+  min-height: 360px;
 }
 
 .pokemonCard img {
@@ -240,7 +252,7 @@ h1 {
   height: 100vh;
 }
 
-#openCard{
+#openCard {
   z-index: 1;
 }
 
