--- a/style.css
+++ b/style.css
@@ -26,12 +26,13 @@ h1 {
 
 .PokemonInfo {
   width: 400px;
-  height: 300px;
   font-size: 17px;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: right;
+  height: 100%;
+  padding-top: 20px;
 }
 
 .infoContainer {
@@ -39,25 +40,37 @@ h1 {
   border-radius: 40px;
   margin-top: -50px;
   min-height: 100px;
+  height: 300px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  width: 400px;
 }
 
 .InfoTable {
   padding-left: 40px;
   padding-right: 40px;
   width: 400px;
+  height: 100%;
 }
 
 .InfoTable tr {
   display: flex;
   justify-content: space-between;
+  height: 100%;
+}
+
+.InfoTable tbody {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .pokemonName {
   text-align: center;
   font-size: 35px;
   margin: 0;
+  position: relative;
+  z-index: 2;
 }
 
 .pokemonHeader {
@@ -66,11 +79,12 @@ h1 {
   justify-content: center;
   flex-direction: column;
   border-radius: 40px;
-  min-width: 250px;
-  min-height: 320px;
+  width: 300px;
+  height: 400px;
   border: 1px solid white;
   border-radius: 40px;
   box-shadow: 0px 0px 10px 1px lightslategray;
+  transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
 }
 
 .pokemonCards {
@@ -78,22 +92,38 @@ h1 {
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 40px;
-  margin-top: 120px;
+  margin-top: 10vh;
+  min-height: 74vh;
+}
+
+.pokemonIMG {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 2;
 }
 
 .pokemonCard {
-  min-width: 302px;
-  min-height: 382px;
+  width: 310px;
+  height: 420px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pokemonHeader:hover {
   cursor: pointer;
-  min-width: 310px;
-  min-height: 360px;
+  width: 310px;
+  height: 410px;
+}
+
+.openPokemonHeader {
+  border-radius: 40px 40px 0 0;
 }
 
 .pokemonCard img {
-  width: 250px;
+  width: 90%;
 }
 
 .openCardStyle {
@@ -106,7 +136,7 @@ h1 {
   align-items: center;
   justify-content: center;
   position: fixed;
-  z-index: 0 !important;
+  z-index: 3 !important;
   top: 0px;
   border: none !important;
 }
@@ -120,7 +150,7 @@ h1 {
   width: 400px;
 }
 
-.hoverPointer :hover {
+.hoverPointer:hover {
   cursor: pointer;
 }
 
@@ -130,13 +160,15 @@ h1 {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 32px;
+  z-index: 3;
   position: fixed;
   width: 100%;
+  height: 10vh;
 }
 
 .header img {
   padding: 6px;
-  height: 100px;
+  height: 10vh;
   margin-left: 122px;
 }
 
@@ -159,8 +191,6 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 150px;
-  width: 300px;
 }
 
 .loadMoreContainer a {
@@ -173,20 +203,17 @@ h1 {
   border: none;
   text-align: center;
   font-size: 32px;
-  margin-top: 32px;
-  margin-bottom: 32px;
   padding: 32px;
   border-radius: 50px;
   border: black 1px solid;
+  height: 110px;
   width: 220px;
-  height: 100px;
 }
 
 .loadMore:hover {
-  width: 230px;
-  height: 110px;
+  width: 222px;
+  height: 112px;
   cursor: pointer;
-  box-shadow: 0px 0px 10px 1px white;
 }
 
 .menuButton {
@@ -203,18 +230,32 @@ h1 {
 }
 
 .infoContainerHeader {
-  padding-top: 40px;
+  padding-top: 20px;
+  padding-bottom: 10px;
   display: flex;
   gap: 200px;
   justify-content: center;
   align-items: center;
   width: 400px;
-  position: absolute;
+  border-bottom: 1px solid black;
+}
+
+.infoContainerHeader a {
+  border-radius: 20px;
+  padding: 10px;
+  position: relative;
+  z-index: 4;
+}
+
+.infoContainerHeader a:hover{
+  text-decoration: underline black 1px solid;
 }
 
 .openCardImg {
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 3;
 }
 
 .openCardImg img {
@@ -239,11 +280,8 @@ h1 {
   display: flex;
   align-items: center;
   flex-direction: row;
-  justify-content: space-between;
-}
-
-.placeholder {
-  width: 400px;
+  justify-content: center;
+  height: 16vh;
 }
 
 .openCardBackground {
@@ -252,8 +290,47 @@ h1 {
   height: 100vh;
 }
 
+.openCardBackground:hover {
+  cursor: auto;
+}
+
+.openCardStyle:hover {
+  cursor: auto !important;
+}
+
 #openCard {
   z-index: 1;
+}
+
+.cardBackground {
+  position: absolute;
+  z-index: 1;
+}
+
+.cardBackground svg {
+  width: 90%;
+  fill: rgba(91, 90, 90, 0.2);
+}
+
+.cardBackground {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.openCardBackgroundImg {
+  align-items: start;
+  width: 400px;
+}
+
+canvas {
+  padding: 0px 20px;
+  height: auto !important;
+  width: auto !important;
+}
+
+.openButton{
+  background-color: lightgray;
 }
 
 ::-webkit-scrollbar {
