--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h1 {
   align-items: center;
   justify-content: center;
   position: fixed;
-  z-index: 3 !important;
+  z-index: 6 !important;
   top: 0px;
   border: none !important;
 }
@@ -169,7 +169,7 @@ h1 {
 .header img {
   padding: 6px;
   height: 10vh;
-  margin-left: 122px;
+  margin-left: 128px;
 }
 
 .header input {
@@ -247,7 +247,7 @@ h1 {
   z-index: 4;
 }
 
-.infoContainerHeader a:hover{
+.infoContainerHeader a:hover {
   text-decoration: underline black 1px solid;
 }
 
@@ -284,22 +284,12 @@ h1 {
   height: 16vh;
 }
 
-.openCardBackground {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-}
-
 .openCardBackground:hover {
   cursor: auto;
 }
 
 .openCardStyle:hover {
   cursor: auto !important;
-}
-
-#openCard {
-  z-index: 1;
 }
 
 .cardBackground {
@@ -329,8 +319,45 @@ canvas {
   width: auto !important;
 }
 
-.openButton{
+.openButton {
   background-color: lightgray;
+}
+
+.openPokemonCard {
+  position: relative;
+  z-index: 20 !important;
+}
+
+.openCardBackground {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  z-index: 6;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.navigateButton path {
+  stroke: rgba(91, 90, 90, 0.2);
+}
+
+.navigateButton {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  width: 400px;
+}
+
+.navigateButton svg {
+  position: relative;
+  z-index: 3;
+  width: 80px;
+}
+
+.navigateButton:hover {
+  cursor: pointer;
 }
 
 ::-webkit-scrollbar {
@@ -372,4 +399,15 @@ canvas {
 
 ::-webkit-scrollbar-corner {
   background: transparent;
+}
+
+@media (max-width: 800px) {
+  .header img {
+    margin-left: 20px;
+  }
+
+  .header input {
+    padding-right: 20px;
+    margin-right: 20px;
+  }
 }
